manifests/base/resources/dcaas/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dcaas
    chart: dcaas-1.7.0
    heritage: Helm
    release: dcaas
  name: dcaas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dcaas
      release: dcaas
  template:
    metadata:
      labels:
        app: dcaas
        release: dcaas
    spec:
      containers:
      - env:
        - name: SPACES_URI
          valueFrom:
            configMapKeyRef:
              key: spacesUri
              name: dcaas-configs
        - name: SPACE_SERVICE
          value: $(SPACES_URI)
        - name: DATA_CONNECTIONS_URI
          valueFrom:
            configMapKeyRef:
              key: dataConnectionsUri
              name: dcaas-configs
        - name: NEW_DATA_CONNECTION_SERVICE
          value: $(DATA_CONNECTIONS_URI)
        - name: CONNECTOR_SERVICES
          valueFrom:
            configMapKeyRef:
              key: connectorServices
              name: dcaas-configs
        - name: CONNECTOR_SERVICE
          value: $(CONNECTOR_SERVICES)
        - name: QIX_DATA_CONNECTION_URI
          valueFrom:
            configMapKeyRef:
              key: qixDataConnectionUri
              name: dcaas-configs
        - name: DATA_CONNECTION_SERVICE
          value: $(QIX_DATA_CONNECTION_URI)
        - name: FEATURE_FLAGS_URI
          valueFrom:
            configMapKeyRef:
              key: featureFlagsUri
              name: dcaas-configs
        - name: FEATUREFLAG_URL
          value: $(FEATURE_FLAGS_URI)
        - name: KEYS_URI
          valueFrom:
            configMapKeyRef:
              key: keysUri
              name: dcaas-configs
        - name: JWKS_ENDPOINT
          value: $(KEYS_URI)/v1/keys/qlik.api.internal
        - name: NODE_ENV
          value: enterprise
        - name: LOG_LEVEL
          value: info
        - name: EMULATE_STORAGE_PROVIDER
          value: "true"
        - name: ENABLE_JWT_AUTH
          value: "true"
        - name: ENABLE_POD_LOADBALANCING
          value: "false"
        - name: ENABLE_FEATUREFLAG_FILTERING
          value: "true"
        image: qlik-docker-qsefe.bintray.io/dcaas:1.7.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 9026
        name: main
        ports:
        - containerPort: 9026
          name: http
          protocol: TCP
      dnsConfig:
        options:
        - name: timeout
          value: "1"
      imagePullSecrets:
      - name: artifactory-docker-secret
---
