manifests/base/resources/dcaas/resources/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: dcaas-redis
    chart: dcaas-redis-10.5.6
    heritage: Helm
    release: dcaas
  name: dcaas-dcaas-redis-master
spec:
  selector:
    matchLabels:
      app: dcaas-redis
      release: dcaas
      role: master
  serviceName: dcaas-dcaas-redis-headless
  template:
    metadata:
      annotations:
        checksum/configmap: c60e05e802761b66c631e2821a323e887176d32a1fff3e1b98a1ba69291a4dc0
        checksum/health: ae708622a7b62c76fcbd88d96cecd9713fb7eae1829f3a2674daad3ae29dee9f
        checksum/secret: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        prometheus.io/port: "9121"
        prometheus.io/scrape: "true"
      labels:
        app: dcaas-redis
        chart: dcaas-redis-10.5.6
        release: dcaas
        role: master
    spec:
      containers:
        - command:
            - /bin/bash
            - -c
            - |
              if [[ -n $REDIS_PASSWORD_FILE ]]; then
                password_aux=`cat ${REDIS_PASSWORD_FILE}`
                export REDIS_PASSWORD=$password_aux
              fi
              if [[ ! -f /opt/bitnami/redis/etc/master.conf ]];then
                cp /opt/bitnami/redis/mounted-etc/master.conf /opt/bitnami/redis/etc/master.conf
              fi
              if [[ ! -f /opt/bitnami/redis/etc/redis.conf ]];then
                cp /opt/bitnami/redis/mounted-etc/redis.conf /opt/bitnami/redis/etc/redis.conf
              fi
              ARGS=("--port" "${REDIS_PORT}")
              ARGS+=("--protected-mode" "no")
              ARGS+=("--include" "/opt/bitnami/redis/etc/redis.conf")
              ARGS+=("--include" "/opt/bitnami/redis/etc/master.conf")
              /run.sh ${ARGS[@]}
          image: docker.io/bitnami/redis:5.0.7-debian-10-r32
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - /health/ping_liveness_local.sh 5
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          name: dcaas-dcaas-redis
          ports:
            - containerPort: 6379
              name: redis
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - /health/ping_readiness_local.sh 5
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources: null
          securityContext:
            runAsUser: 1001
          volumeMounts:
            - mountPath: /health
              name: health
            - mountPath: /data
              name: redis-data
              subPath: null
            - mountPath: /opt/bitnami/redis/mounted-etc
              name: config
            - mountPath: /opt/bitnami/redis/etc/
              name: redis-tmp-conf
        - command:
            - /bin/bash
            - -c
            - |
              if [[ -f '/secrets/redis-password' ]]; then
               export REDIS_PASSWORD=$(cat /secrets/redis-password)
              fi
              redis_exporter
          image: docker.io/bitnami/redis-exporter:1.4.0-debian-10-r3
          imagePullPolicy: IfNotPresent
          name: metrics
          ports:
            - containerPort: 9121
              name: metrics
          resources: null
          volumeMounts: null
      securityContext:
        fsGroup: 1001
      serviceAccountName: default
      volumes:
        - configMap:
            defaultMode: 493
            name: dcaas-dcaas-redis-health
          name: health
        - configMap:
            name: dcaas-dcaas-redis
          name: config
        - emptyDir: {}
          name: redis-tmp-conf
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - metadata:
        labels:
          app: dcaas-redis
          component: master
          heritage: Helm
          release: dcaas
        name: redis-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
        selector: null
---
