manifests/base/resources/dcaas/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9026"
    prometheus.io/scrape: "true"
    prometheus.io/scrape_high_cardinality: "true"
  labels:
    app: dcaas
    chart: dcaas-1.7.0
    heritage: Helm
    release: dcaas
  name: dcaas
spec:
  ports:
  - name: http
    port: 9026
    protocol: TCP
    targetPort: http
  selector:
    app: dcaas
    release: dcaas
  type: ClusterIP
---
