manifests/base/resources/dcaas/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-signin: https://$host/login?returnto=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: http://dcaas-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/dcaas/(.*) /$1 break;
      rewrite (?i)/dcaas/(.*) /$1 break;
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
  labels:
    app: dcaas
    chart: dcaas-1.7.0
    heritage: Helm
    release: dcaas
  name: dcaas
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: dcaas
          servicePort: 9026
        path: /dcaas
      - backend:
          serviceName: dcaas
          servicePort: 9026
        path: /api/dcaas
---
